--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
 		</div>
 	</div>
 
-	<div class="container-fluid padding">
+	<div class="container-fluid padding mb-5">
 		<div class="row padding section-gray">
 			<div class="col-lg-6">
 				<img src="/img/bootstrap2.png" alt="" class="img-fluid">
@@ -238,7 +238,7 @@
 					<p>City, State, 0000</p>
 				</div>
 				<div class="col-12">
-					<hr class="light">
+					<hr>
 					<h5>Suzuki WebDesign &copy; 2019</h5>
 				</div>
 			</div>
